@@ -1,3 +1,8 @@
+2007-08-12  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add a mime-type for QTIF QuickTime image
+	files
+
 === shared-mime-info 0.22 ===
 
 2007-07-30  Bastien Nocera  <hadess@hadess.net>
